--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "inngest": "^3.44.3",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
